K-gateway-envoy-proxy/deployment.yml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: atharva-deployment
  namespace: atharva-ns
  labels:
    first: app

spec:
  replicas: 2

  selector:
    matchLabels:
      app: web

  template:
    metadata:
      labels:
        app: web

    spec:
      containers:
      - name: atharva-container

        image: atharva7823/fitnesstracker:v1

        ports:
        - containerPort: 5000

---
apiVersion: v1
kind: Service
metadata:
  name: atharva-service
  namespace: atharva-ns
spec:
  selector:
    app: web
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: ClusterIP
